<resources>

    <string name="fabric_api_key">393b9846c0e0178f8f0768740bdc6fbe3227ef4e</string>
    <string name="facebook_app_id">1750759625204363</string>

    <!-- Login -->
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_text">Login</string>
    <string name="logout_text">Logout</string>
    <string name="login_error_fields_empty">Username and password fields should not be empty</string>
    <string name="invalid_email">The email has an incorrect format</string>
    <string name="remember_username">Remember me</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="create_new_account">Create new account</string>

    <!-- Create account -->
    <string name="first_name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="create_account">Create account</string>
    <string name="create_account_empty_fields">All fields are mandatory, please fill out all fields.</string>
    <string name="create_account_user_existing">Username already exists</string>
    <string name="create_account_error">Create account could not be performed this time. Please try it later.</string>
    <string name="create_account_success">You are created a new account successfuly!! Just review your inbox to activate your account.</string>

    <!-- Recover Password -->
    <string name="recover_error_fields_empty">Username field should not be empty</string>
    <string name="recover_submit_button_text">Recover Password</string>
    <string name="recover_password_error">Recover Password could not be performed this time. Please try it later.</string>
    <string name="recover_password_success">An email has been successfully sent to you! Please follow steps that are described in there.</string>

    <!-- Menu -->
    <string name="menu_home">Home</string>
    <string name="menu_bookmarks">BookMarks</string>
    <string name="menu_action_settings">Settings</string>

    <!-- Headers / Toolbar -->
    <string name="header_time_line">Time Line</string>
    <string name="header_create_meal">New Meal</string>

    <!-- Errors -->
    <string name="general_error">There is something wrong: %s</string>
    <string name="required_field">* Indicates required field</string>
    <string name="name_required_field">Name is a required</string>
    <string name="default_tag_photo">default</string>

    <!-- Create Meal -->
    <string name="meal_title">Meal information</string>
    <string name="meal_name_hint">Name *</string>
    <string name="meal_description_hint">Description (optional)</string>
    <string name="meal_source_picture">* Picture: </string>
    <string name="menu_save_meal">Done</string>
    <string name="alert_photo_title">Add Photo!</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_photo">Choose from Library</string>
    <string name="select_file">Select File</string>

    <!-- Permissions Dialog -->
    <string name="permissions_title">Why do we ask?</string>
    <string name="permissions_message">We need your permission to access to your gallery and upload a photo, or take a photo from camera.</string>
    <string name="cancel_button">Cancel</string>

</resources>
