<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <!-- Toolbar -->
    <include
        android:id="@+id/tb_create_meal"
        layout="@layout/tool_bar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tb_create_meal"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/tv_title"
            style="@style/Font.Roboto.Medium.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="@string/meal_title"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ti_name_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title"
            app:counterEnabled="true"
            app:counterMaxLength="@integer/max_length_meal_name"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/et_name"
                style="@style/Font.Roboto.Medium.Body2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/meal_name_hint"
                android:inputType="text"
                android:maxLength="@integer/max_length_meal_name"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ti_description_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ti_name_wrapper"
            app:counterEnabled="true"
            app:counterMaxLength="@integer/max_length_meal_description">

            <EditText
                android:id="@+id/et_description"
                style="@style/Font.Roboto.Medium.Body2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/meal_description_hint"
                android:inputType="textMultiLine"
                android:maxLength="@integer/max_length_meal_description"
                />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/picture_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ti_description_wrapper"
            android:orientation="horizontal"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/tv_title_img_source"
                style="@style/Font.Roboto.Regular.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ti_description_wrapper"
                android:gravity="left"
                android:paddingRight="@dimen/padding_right_picture"
                android:text="@string/meal_source_picture"
                android:visibility="gone"
                />

            <ImageView
                android:id="@+id/iv_meal_picture"
                android:layout_width="@dimen/margin_width_picture"
                android:layout_height="@dimen/margin_height_picture"
                android:cropToPadding="false"
                android:foregroundGravity="center"
                android:src="@drawable/ic_add_a_photo_black_48dp"
                android:tag="@string/default_tag"/>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv_required_field"
            style="@style/Font.Roboto.Regular.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/picture_layout"
            android:gravity="left"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/required_field"
            />
    </RelativeLayout>

</RelativeLayout>