<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_padding_text">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/recover_password_form"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding_text">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtUsername"
                android:inputType="textEmailAddress"
                android:hint="@string/username_hint"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnRecoverPassword"
            android:text="@string/recover_submit_button_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/recover_password_success"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:padding="@dimen/default_padding_text"
        android:visibility="gone">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/recover_pass_sucess_image_height"
            android:src="@drawable/email_success"
            android:scaleType="centerCrop"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Font.Roboto.Bold"
            android:text="@string/recover_password_success"
            android:layout_gravity="center_horizontal"
            android:paddingTop="@dimen/default_padding_text"/>

    </LinearLayout>

</RelativeLayout>